# SignalForce

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  TODOS.md  pyproject.toml
config.example/: config.yaml  gtm-context.md  playbooks.yaml
demo/: veriforce.html  veriforce.json
docs/: architecture.md  cost-analysis.md  demo-walkthrough.md  n8n-setup-guide.md  results-framework.md  setup-guide.md  user-guide.md
examples/cybersecurity/: config.yaml  gtm-context.md
examples/data-infra/: config.yaml  gtm-context.md
examples/devtools/: config.yaml  gtm-context.md
examples/marketo-migration/: config.yaml  gtm-context.md
examples/marops/: veriforce.yaml
examples/rl-infrastructure/: gtm-context.md
n8n-workflows/: crm-sync.json  daily-signal-scan.json  enrichment-pipeline.json  sequence-launcher.json
renderer/marops/: lifecycle_brief.html.j2
scripts/: api_client.py  arxiv_monitor.py  config.py  config_loader.py  db.py  funding_tracker.py  generate_demo_pdf.py  github_rl_scanner.py  hf_model_monitor.py  intent_scorer.py  job_posting_scanner.py  linkedin_activity.py  models.py  multi_channel_sequencer.py  outcome_tracker.py  recency.py  scanner_runner.py  signal_stacker.py
scripts/marops/: briefer.py  cli.py  models.py  renderer.py
scripts/scanners/: __init__.py  arxiv_scanner.py  base.py  funding_scanner.py  github_scanner.py  hf_scanner.py  job_scanner.py  linkedin_scanner.py
skills/champion-tracker/: SKILL.md
skills/compliance-manager/: SKILL.md
skills/contact-finder/: SKILL.md
skills/deliverability-manager/: SKILL.md
(+64 files in other folders)
