[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "rl-gtm-engine"
version = "0.1.0"
description = "A Signal-Based Outbound Engine for RL Infrastructure"
requires-python = ">=3.11"
dependencies = [
    "requests",
    "pydantic",
    "python-dotenv",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "pytest-asyncio",
    "ruff",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=. --cov-fail-under=80"
